--- a/spring05_mymelon/pom.xml
+++ b/spring05_mymelon/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.5</version>
+		<version>2.7.5</version> <!-- 수정 -->
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>kr.co</groupId>
@@ -43,8 +43,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
-
 		<!-- 사용자 추가 라이브러리(의존성) 시작 -->
 		<!-- https://mvnrepository.com/ 에서 라이브러리 다운 -->
 
@@ -66,7 +64,7 @@
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
-			<version>10.1.15</version>
+			<version>9.0.68</version>
 		</dependency>
 
 		<!-- JSTL 관련 라이브러리 (jstl검색 -->
@@ -82,7 +80,6 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.5</version>
 		</dependency>
-
 
 		<!-- 사용자 추가 라이브러리(의존성) 끝 -->
 
